Bug 376553 - the color of a frame in the animation timeline is not copied with the frame
Summary: the color of a frame in the animation timeline is not copied with the frame
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.1.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-16 16:34 UTC by z-uo
Modified: 2017-03-03 18:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description z-uo 2017-02-16 16:34:09 UTC
Make two frame in the timeline with two different colors.
Select them and copy with ctrl,
The don't keep their color but take the color of the last frame.

I use the color to know where are my keyframe and the information is lost whith the copy.
Comment 1 gordie.lachance+dev 2017-03-03 16:22:45 UTC
Agree.
I would like to use colors to visually see which is the first frame of my cycles; loosing the color when copying is not logical.
Comment 2 joupent 2017-03-03 18:42:28 UTC
Git commit ddeee5850af5494fb575898e0e0e1e7e96767046 by Jouni Pentikäinen.
Committed on 03/03/2017 at 18:31.
Pushed by jounip into branch 'master'.

Use copy constructors when duplicating keyframes

This helps to ensure that all related data (such as color label)
will be copied.

M  +15   -4    libs/image/kis_raster_keyframe_channel.cpp
M  +9    -2    libs/image/kis_scalar_keyframe_channel.cpp

https://commits.kde.org/krita/ddeee5850af5494fb575898e0e0e1e7e96767046