Use copy constructors when duplicating keyframes

This helps to ensure that all related data (such as color label)
will be copied.

BUG:376553